<resources>
    <string name="app_name">La Cuisine</string>
    <string name="foods">Food</string>
    <string name="drink">Drink</string>
    <string name="desserts">Dessert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="check_out">Check Out</string>
    <string name="menu_descript">Menu Descript</string>
    <string name="menu_name">Menu Name</string>
    <string name="menu_price">Menu Price</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="tambah_data">Tambah Data</string>
    <string name="menu">Menu</string>
    <string name="pesan">Order</string>
    <string name="menu_qty">Banyak</string>
    <string name="no_meja">Nomor Meja</string>
    <string name="hasil">Final</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="nama_menu">Nama Menu</string>
    <string name="jumlah">Jumlah</string>
    <string name="nomor_meja">Nomor Meja</string>

</resources>