<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:padding="28dp"
    tools:context=".TambahFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp" >
        
        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:hint="@string/nama_menu"
            tools:ignore="Autofill" />
        
        <EditText
            android:id="@+id/edt_jumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlah"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_nomor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomor_meja"
            tools:ignore="Autofill" />
        
        <Button
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="Add" />
        
    </LinearLayout>

</LinearLayout>